--- a/RussiaWorldCup2018/app/src/main/AndroidManifest.xml
+++ b/RussiaWorldCup2018/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest package="com.khasang.russiaworldcup2018"
           xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <uses-permission android:name="android.permission.INTERNET"/>
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -18,6 +20,7 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+        <activity android:name=".rss.RSSActivity"/>
     </application>
 
 </manifest>
